--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	</head>
 
 	<body>
+		<main>
 		<div class="center">
 		<img src="images/image-qr-code.png" height="270" width="270" alt="QR Code">
 		<br>
@@ -24,7 +25,7 @@
 		<h1> Scan this QR code to know more about me </h1>
 		<p> Kia ora! Scan the QR code to visit a list of my projects and comic books. I hope you enjoy my works</p>
 		</div>
-  
+		</main>
 
 	</body>
 	
