--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet');
+			@import url("https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet");
 		</style>
 
 	</head>
